# Agenticos

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md  build.rs  build.sh  conductor.json  create_temp_font.py  rust-toolchain.toml  test.sh
.cargo/: config.toml
.claude/: settings.json
.claude/rules/: no-std.md  panic-and-attributes.md  testing-flow.md
.conductor/: archive.sh  run.sh  setup.sh
assets/: system.ttf.LICENSE  test.txt
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  ai-context-conventions.md  conductor-workflow.md  crash-diagnostics.md  macos-virgl-qualification.md  shell_window_integration.md  window_system_design.md
docs/brainstorms/: 2026-05-08-001-feat-kernel-mcp-debug-bridge-requirements.md  (+3 more)
host_share/: HOST.TXT
scripts/: fsck-data.sh  qemu-compositor.sh  qemu-slirp-bridge.sh  qemu-virgl-preflight.sh  qemu-window-scale.sh  test-crash-diagnostics.sh  test-ext2-interop.sh  test-virgl-integration.sh
shared/fontdata/: Cargo.toml
src/: bootloader_config.rs  clipboard.rs  core_font.rs  core_gfx.rs  core_text.rs  debug.rs  display.rs  double_buffer.rs  double_buffered_text.rs  embedded_font.rs  font.rs  font_data.rs  frame_buffer.rs  interrupts.rs  kernel.rs  main.rs  memory.rs  panic.rs  random.rs  system_control.rs  text_buffer.rs  time.rs  truetype_font.rs  vfnt.rs  vga_buffer.rs
tools/: clipboard_bridge.py  crash_decode.py  crash_manifest.py  make-system-font.sh  net-test-echo.py  net-test-http.py  net-test-https.py  run_with_timeout.py  test_clipboard_bridge.py  test_crash_decode.py
tools/mcp-bridge/: README.md  bridge.py  kernel_client.py  pyproject.toml  run.sh  serial_tail.py
userland/: Cargo.toml  README.md  apps.manifest.sh  linker.ld  prebuilt-lib.sh  refresh-prebuilt.sh  stage-lib.sh  test-gui-core.sh
userland/.cargo/: config.toml
userland/apps/binutils/: Makefile  README.md
userland/apps/binutils/tests/: archive-main.s  exit42.s  symbols.c
userland/apps/busybox/: Makefile  README.md  busybox.config
userland/apps/calc/: Cargo.toml  build.rs
userland/apps/calc/src/: main.rs
userland/apps/clipboard/: Cargo.toml  build.rs
userland/apps/clipboard/src/: main.rs
userland/apps/compiler-compat/: Makefile  README.md
userland/apps/compiler-compat/src/: crt.c  libc.c  probe.c
userland/apps/control/: Cargo.toml  README.md  build.rs
userland/apps/control/src/: main.rs
userland/apps/curl/: Makefile  README.md
userland/apps/desktop/: Cargo.toml  build.rs
userland/apps/desktop/src/: icons.rs  main.rs
userland/apps/fileman/: Cargo.toml  README.md  build.rs
userland/apps/fileman/src/: main.rs
userland/apps/gcc/: Makefile  README.md
userland/apps/gcc/tests/: compute.c  crash.c  hello.c  two-main.c  two-util.c
userland/apps/git/: Makefile  README.md
userland/apps/git/patches/: 0001-lower-preload-thread-cost-for-9p.patch
userland/apps/glgame/: Cargo.toml  build.rs
userland/apps/glgame/src/: main.rs
userland/apps/guidemo/: Cargo.toml  build.rs
userland/apps/guidemo/src/: main.rs
userland/apps/guilaunch/: Cargo.toml  README.md  build.rs
userland/apps/guilaunch/src/: main.rs
userland/apps/hello/: Cargo.toml  build.rs
userland/apps/hello-cpp/: Makefile
userland/apps/hello-cpp/src/: main.cpp
userland/apps/hello/src/: main.rs
userland/apps/libuv-plumbing-test/: Makefile  README.md
userland/apps/libuv-plumbing-test/src/: libuv_plumbing_test.c
userland/apps/links2/: Makefile  README.md
userland/apps/links2/driver/: agenticos-ui.c  agenticos.c  agenticos_ui.h
userland/apps/links2/driver-rs/: Cargo.toml  README.md
userland/apps/links2/driver-rs/src/: lib.rs  native_ui.rs
userland/apps/links2/patches/: 0001-use-fork-helper-without-pthreads.patch  0002-add-agenticos-graphics-driver.patch  0003-agenticos-secure-https-defaults.patch  0003-route-menus-to-agenticos-native-ui.patch
userland/apps/network-test/: Makefile  README.md
userland/apps/network-test/src/: network_test.c
userland/apps/notepad/: Cargo.toml  build.rs
userland/apps/notepad/src/: main.rs
userland/apps/painting/: Cargo.toml  build.rs
userland/apps/painting/src/: main.rs
userland/apps/taskmgr/: Cargo.toml  build.rs
userland/apps/taskmgr/src/: main.rs  sampler.rs
userland/apps/tcc/: Makefile  README.md
userland/apps/tcc/examples/: args.c  hello.c  pthread_cond.c  pthread_detached.c  pthread_join.c  pthread_mutex.c  pthread_tls.c
userland/apps/terminal/: Cargo.toml  build.rs
userland/apps/terminal/src/: main.rs
userland/apps/zsh/: Makefile  README.md
userland/build-support/: Cargo.toml
userland/build-support/src/: lib.rs
userland/ca-certificates/: Makefile  README.md
userland/libs/dialogs/: Cargo.toml
userland/libs/dialogs/src/: color_picker.rs  file_dialog.rs  lib.rs  message_box.rs  path.rs
userland/libs/gl/: Cargo.toml
userland/libs/gl/src/: lib.rs
userland/libs/gui/: Cargo.toml
userland/libs/gui-core/: Cargo.toml
userland/libs/gui-core/src/: focus.rs  geometry.rs  input.rs  lib.rs  scroll.rs  text_edit.rs
userland/libs/gui/src/: controls.rs  file_ui.rs  font.rs  input.rs  lib.rs  menu.rs  scrollbar.rs  slider.rs  svg.rs  tab_bar.rs  text_area.rs  theme.rs
userland/libs/termgrid/: Cargo.toml
userland/libs/termgrid/src/: font.rs  lib.rs
userland/libs/vte/: Cargo.toml
userland/libs/vte/src/: caret.rs  color.rs  colors.rs  config.rs  input.rs  keys.rs  lib.rs  screen.rs  vte.rs
userland/prebuilt/: BB.ELF  GIT.ELF  LINKS.ELF  README.md  TCC.ELF  ZSH.ELF
userland/prebuilt/binutils/: ADDRLINE.ELF  AR.ELF  AS.ELF  CPPFILT.ELF  ELFEDIT.ELF  LD.ELF  NM.ELF  OBJCOPY.ELF  OBJDUMP.ELF  RANLIB.ELF  READELF.ELF  SIZE.ELF  STRINGS.ELF  STRIP.ELF
userland/prebuilt/compiler-compat/: CCCRT.ELF  CCLIBC.ELF  CCPROBE.ELF  README.md
userland/prebuilt/libuv/: UVPLUMB.ELF
userland/prebuilt/network/: NETTEST.ELF
userland/runtime/: Cargo.toml
userland/runtime/src/: lib.rs
userland/zsh-config/: README.md  agnoster.zsh-theme  zshrc
userland/zsh-config/functions/: VCS_INFO_get_data_git  VCS_INFO_patch2subject  add-zle-hook-widget
(+469 files in other folders)
