[package]
name = "agenticos"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
bootloader="0.11.10"
bootloader_linker = "0.1.7"

[dependencies]
bootloader_api = "0.11.10"
qemu_print = "0.1.0"
volatile = "0.2.6"

#[package.metadata.bootimage]
#build-command = ["build"]
#run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-m", "512M", "-no-reboot", "-no-shutdown"]