[package]
name = "agenticos"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
test = []

[build-dependencies]
bootloader="0.11.10"
bootloader_linker = "0.1.7"

[dependencies]
bootloader_api = "0.11.10"
qemu_print = "0.1.0"
volatile = "0.2.6"
spin = "0.9"
x86_64 = "0.14"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
pic8259 = "0.10"
linked_list_allocator = "0.10"


#[package.metadata.bootimage]
#build-command = ["build"]
#run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-m", "512M", "-no-reboot", "-no-shutdown"]