[package]
name = "agenticos"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
test = []

[build-dependencies]
bootloader = "=0.11.10"
bootloader_linker = "0.1.7"
fatfs = { version = "=0.3.6", default-features = false, features = ["std", "alloc"] }

[dependencies]
bootloader_api = "=0.11.10"
qemu_print = "0.1.0"
volatile = "0.2.6"
spin = "0.9"
x86_64 = "0.14"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
pic8259 = "0.10"
linked_list_allocator = "0.10"
uart_16550 = "0.2.19"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "raw_value"] }
ttf-parser = { version = "0.25", default-features = false, features = ["no-std-float"] }
ab_glyph_rasterizer = { version = "0.1", default-features = false, features = ["libm"] }
libm = "0.2"
smoltcp = { version = "=0.12.0", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-dhcpv4", "socket-icmp", "socket-raw", "socket-udp", "socket-tcp"] }
fontdata = { path = "shared/fontdata" }


#[package.metadata.bootimage]
#build-command = ["build"]
#run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}", "-m", "512M", "-no-reboot", "-no-shutdown"]
