# Userland sibling cargo workspace (D9).
#
# Not a member of the kernel's workspace. Built independently with its own
# `target/`, its own `build-std`, and its own custom linker script. The
# resulting ELF is staged into `host_share/HELLO.ELF` by `build.sh` so the
# guest can `run /HOST/HELLO.ELF`.
#
# See userland/README.md for how to add a new app.

[workspace]
resolver = "2"
exclude = ["build-support"]
members = [
    "runtime",
    "libs/gui-core",
    "libs/gui",
    "libs/gl",
    "libs/dialogs",
    "apps/hello",
    "apps/clipboard",
    "apps/guilaunch",
    "apps/guidemo",
    "apps/notepad",
    "apps/taskmgr",
    "apps/calc",
    "apps/painting",
    "apps/glgame",
    "apps/fileman",
    "apps/control",
]

# Release profile: small, panic-abort, LTO, strip. The output ELF must be
# acceptable to the U6 loader: static, non-PIE, ET_EXEC, x86_64. There is no
# size ceiling — ZSH.ELF (1.5 MB) and HELLOCPP.ELF (8.7 MB) stage and run;
# the run command caps user binaries at 16 MiB (MAX_USER_BINARY_BYTES).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.dev]
panic = "abort"
