[package]
name = "fileman"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "fileman"
path = "src/main.rs"

[dependencies]
runtime = { path = "../../runtime" }
gui = { path = "../../libs/gui" }
dialogs = { path = "../../libs/dialogs" }

[build-dependencies]
userland-build-support = { path = "../../build-support" }
