[package]
name = "glgame"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "glgame"
path = "src/main.rs"

[dependencies]
runtime = { path = "../../runtime" }
gui = { path = "../../libs/gui" }
gl = { path = "../../libs/gl" }

[build-dependencies]
userland-build-support = { path = "../../build-support" }
