[package]
name = "painting"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "painting"
path = "src/main.rs"

[dependencies]
runtime = { path = "../../runtime" }
gui = { path = "../../libs/gui" }

[build-dependencies]
userland-build-support = { path = "../../build-support" }
