[package]
name = "gui"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["standalone"]
standalone = ["runtime/standalone"]
embedded = ["runtime/embedded"]

[dependencies]
runtime = { path = "../../runtime", default-features = false }
gui-core = { path = "../gui-core" }
ab_glyph_rasterizer = { version = "0.1", default-features = false, features = ["libm"] }
libm = "0.2"
spin = "0.9"
ttf-parser = { version = "0.25", default-features = false, features = ["no-std-float"] }
