[package]
name = "links-agenticos-driver"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
gui = { path = "../../../libs/gui", default-features = false, features = ["embedded"] }
gui-core = { path = "../../../libs/gui-core" }
runtime = { path = "../../../runtime", default-features = false, features = ["embedded"] }

[profile.release]
panic = "abort"
opt-level = 2
lto = true
codegen-units = 1

[workspace]
